--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
   "dependencies": {
     "dotenv": "^16.0.0",
     "puppeteer": "^13.5.1"
+  },
+  "devDependencies": {
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.2"
   }
 }
