chore: Add npm script

--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "main": "index.js",
   "author": "Yasushi Ikeda <yikeda6616@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "start": "ts-node src/index.ts"
+  },
   "dependencies": {
     "dotenv": "^16.0.0",
     "puppeteer": "^13.5.1"
