doc: Update ISSUE_TEMPLATE

--- a/.github/ISSUE_TEMPLATE/issue-report.yml
+++ b/.github/ISSUE_TEMPLATE/issue-report.yml
@@ -1,6 +1,7 @@
-name: Issue Report
-description: File an issue report
-title: "[Issue]: "
+name: Bug Report
+description: File a bug report
+title: "[Bug]: "
+labels: ["bug"]
 assignees:
   - yikeda6616
 body:
