chore: yarn add dayjs

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "csv-stringify": "^6.0.5",
+    "dayjs": "^1.11.1",
     "dotenv": "^16.0.0",
     "puppeteer": "^13.5.1"
   },
